# distributed

./: .env  .env.example  .gitignore  GUIDELINES.md  README.md  main.py  pyproject.toml
app/db/: connection.py
app/jobs/: enqueue.py  job.py
app/models/: model.py
app/utils/: parsers.py
db/: connection.py
migrations/: 001_create_jobs_table.sql
models/: model.py
router/: routes.py
scripts/: generatesql.py
